// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table has clickable rows should match snapshot 1`] = `
<div>
  <Overlay
    loading={false}
    visible={false}
  >
    <Table>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          onClick={[Function]}
        >
          <HeadCell
            content="test-column-display"
            key="0"
            name="test-column-name"
          />
          <HeadCell
            content="test-column-display2"
            key="1"
            name="test-column-name2"
          />
        </Row>
      </Component>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={0}
          key="0"
          onClick={[MockFunction]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry1.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry1.2
          </DataCell>
        </Row>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={1}
          key="1"
          onClick={[MockFunction]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry2.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry2.2
          </DataCell>
        </Row>
      </Component>
      <Component />
    </Table>
  </Overlay>
</div>
`;

exports[`Table has no data provided should match snapshot 1`] = `
<div>
  <Overlay
    loading={false}
    visible={false}
  >
    <Table>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          onClick={[Function]}
        >
          <HeadCell
            content="test-column-display"
            key="0"
            name="test-column-name"
          />
          <HeadCell
            content="test-column-display2"
            key="1"
            name="test-column-name2"
          />
        </Row>
      </Component>
      <Component>
        <Empty
          colSpan={2}
          message="No data to show"
        />
      </Component>
      <Component />
    </Table>
  </Overlay>
</div>
`;

exports[`Table is paginated should match snapshot 1`] = `
<div>
  <Overlay
    loading={false}
    visible={false}
  >
    <Table>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          onClick={[Function]}
        >
          <HeadCell
            content="test-column-display"
            key="0"
            name="test-column-name"
          />
          <HeadCell
            content="test-column-display2"
            key="1"
            name="test-column-name2"
          />
        </Row>
      </Component>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={0}
          key="0"
          onClick={[Function]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry1.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry1.2
          </DataCell>
        </Row>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={1}
          key="1"
          onClick={[Function]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry2.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry2.2
          </DataCell>
        </Row>
      </Component>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          onClick={[Function]}
        >
          <DataCell
            className="paginationCell"
            colSpan={2}
            small={false}
          >
            <Pagination
              className="pagination"
              disableInitialCallback={true}
              forcePage={0}
              hideIfOnlyOnePage={true}
              initialPage={0}
              marginPagesDisplayed={1}
              onPageChange={[Function]}
              pageCount={1}
              pageRangeDisplayed={2}
            />
          </DataCell>
        </Row>
      </Component>
    </Table>
  </Overlay>
</div>
`;

exports[`Table is sortable should match snapshot 1`] = `
<div>
  <Overlay
    loading={false}
    visible={false}
  >
    <Table>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          onClick={[Function]}
        >
          <HeadCell
            key="0"
            name="test-column-name"
          >
            <SortButton
              active={false}
              name="test-column-name"
              onSort={[Function]}
              title="test-column-display"
            />
          </HeadCell>
          <HeadCell
            content="test-column-display2"
            key="1"
            name="test-column-name2"
          />
          <HeadCell
            key="2"
            name="test-column-name3"
          >
            <SortButton
              active={false}
              name="test-column-name3"
              onSort={[Function]}
              title="test-column-display3"
            />
          </HeadCell>
        </Row>
      </Component>
      <Component>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={0}
          key="0"
          onClick={[Function]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry1.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry1.2
          </DataCell>
          <DataCell
            key="2"
            small={false}
          >
            entry1.3
          </DataCell>
        </Row>
        <Row
          body={true}
          clickable={true}
          footer={false}
          head={false}
          id={1}
          key="1"
          onClick={[Function]}
        >
          <DataCell
            key="0"
            small={false}
          >
            entry2.1
          </DataCell>
          <DataCell
            key="1"
            small={false}
          >
            entry2.2
          </DataCell>
          <DataCell
            key="2"
            small={false}
          >
            entry2.3
          </DataCell>
        </Row>
      </Component>
      <Component />
    </Table>
  </Overlay>
</div>
`;
